Update and rename index.html.txt to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
           <div class = "container start">
               <h3 class ='container_h3'></h3>
-              <div class = 'start-btn'> Начать </div>
+              <div class = 'start-btn'> ГЌГ Г·Г ГІГј </div>
           </div>
 
                    <h3 class="container_h3"> </div>
